@@ -5,7 +5,7 @@ Description: preliminary GNU/Hurd support
  Also disable the fatal warnings for the linker, as we might hit symbols
  which are not implemented and will always fail.
 Forwarded: no
-Last-Update: 2011-05-30
+Last-Update: 2012-10-01
 --- a/kdecore/kernel/kstandarddirs.cpp
 +++ b/kdecore/kernel/kstandarddirs.cpp
 @@ -73,6 +73,10 @@
@@ -34,7 +34,7 @@ Last-Update: 2011-05-30
  int build_link(const char* tmp, const char *tmp_prefix, const char *kde_prefix);
 --- a/cmake/modules/FindKDE4Internal.cmake
 +++ b/cmake/modules/FindKDE4Internal.cmake
-@@ -1221,8 +1221,8 @@ if (CMAKE_COMPILER_IS_GNUCXX)
+@@ -1220,8 +1220,8 @@ if (CMAKE_COMPILER_IS_GNUCXX)
     endif (CMAKE_SYSTEM_NAME MATCHES Linux OR CMAKE_SYSTEM_NAME STREQUAL GNU)
  
     if (CMAKE_SYSTEM_NAME STREQUAL GNU)
