@@ -2,7 +2,7 @@ From: Modestas Vainius <modax@debian.org>
 Subject: Framework for making libkdeinit4_*.so "private"
 Forwarded: no
 Origin: vendor
-Last-Update: 2011-03-27
+Last-Update: 2012-10-01
 
 The patch adds LIBKDEINIT_INSTALL_DIR cmake flag which specifies where
 libkdeinit4_*.so are supposed to end up. Please note, however, that
@@ -47,7 +47,7 @@ libraries.
     _set_fancy(IMPORTS_INSTALL_DIR       "${PLUGIN_INSTALL_DIR}/imports"                "The subdirectory relative to the install prefix where imports will be installed")
     _set_fancy(CONFIG_INSTALL_DIR       "${SHARE_INSTALL_PREFIX}/config"         "The config file install dir")
     _set_fancy(DATA_INSTALL_DIR         "${SHARE_INSTALL_PREFIX}/apps"           "The parent directory where applications can install their data")
-@@ -1332,6 +1333,10 @@ if (CMAKE_C_COMPILER MATCHES "icc")
+@@ -1331,6 +1332,10 @@ if (CMAKE_C_COMPILER MATCHES "icc")
  
  endif (CMAKE_C_COMPILER MATCHES "icc")
  
